--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <modules>
         <module>spring-in-action</module>
         <module>util</module>
+        <module>schulte-table</module>
     </modules>
 
     <properties>
         <spring-version>4.0.0.RELEASE</spring-version>
     </properties>
-
 
 
     <dependencies>
@@ -56,7 +56,6 @@
         </dependency>
 
     </dependencies>
-
 
 
     <dependencyManagement>
@@ -99,6 +98,27 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>meituan</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>dianping</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>cythincx1</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 
 
 </project>
