--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,19 @@
                 <artifactId>util</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
+            <!-- jetty -->
+            <!--<dependency>-->
+                <!--<groupId>org.eclipse.jetty</groupId>-->
+                <!--<artifactId>jetty-project</artifactId>-->
+                <!--<version>9.4.2.v20170220</version>-->
+            <!--</dependency>-->
+
+            <!-- jetty plugin-->
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.2.v20170220</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
