--- a/schulte-table/pom.xml
+++ b/schulte-table/pom.xml
@@ -40,15 +40,15 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <configuration>
-                    <httpConnector>
-                        <port>8888</port>
-                        <idleTimeout>3000</idleTimeout>
-                    </httpConnector>
-                    <webApp>
-                        <contextPath>/</contextPath>
-                    </webApp>
-                </configuration>
+                <!--<configuration>-->
+                    <!--<httpConnector>-->
+                        <!--<port>8888</port>-->
+                        <!--<idleTimeout>3000</idleTimeout>-->
+                    <!--</httpConnector>-->
+                    <!--<webApp>-->
+                        <!--<contextPath>/</contextPath>-->
+                    <!--</webApp>-->
+                <!--</configuration>-->
             </plugin>
         </plugins>
     </build>
