--- a/think-in-java/pom.xml
+++ b/think-in-java/pom.xml
@@ -15,6 +15,8 @@
         <dependency>
             <groupId>com.chengyuxing</groupId>
             <artifactId>util</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
