新建effective模块，加入第一条和第二条的测试

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>algorithm</module>
         <module>view</module>
         <module>lucene</module>
+        <module>effective-java</module>
     </modules>
 
     <properties>
